# arxiv-graphify

./: .gitignore  README.md  pyproject.toml  ~$ DOCX 文档.docx  新建 DOCX 文档.docx
docs/plans/: 2026-04-15-arxiv-graphify-design.md  2026-04-15-arxiv-graphify-implementation.md
src/arxiv_graphify/: __main__.py  arxiv_client.py  cli.py  config.py  downloader.py  metadata.py  qwen_client.py
tests/: test_arxiv_client.py  test_config.py  test_downloader.py  test_integration.py  test_metadata.py  test_qwen_client.py
